// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> Should correctly render recipe 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  id={1}
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    🤍
  </span>
  <span>
    Test Recipe
  </span>
  <span>
    Test Category
  </span>
</li>
`;

exports[`<RecipeListItem /> Should not break if no recipe passed 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    🤍
  </span>
  <span />
  <span />
</li>
`;

exports[`<RecipeListItem /> Should render favorited state 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  id={1}
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    💗
  </span>
  <span>
    Test Recipe
  </span>
  <span>
    Test Category
  </span>
</li>
`;
